# multistage-retrieval-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Dockerfile  Makefile  README.md  docker-compose.yml  getting_started.sh  pyproject.toml  pytest.ini
.claude/commands/: exit-reflect.md
.github/workflows/: ci.yml
evals/: __init__.py  harness.py  retrieval.py  seed_transcripts.py
evals/datasets/: __init__.py  eval_questions.json
evals/judges/: __init__.py
evals/loaders/: __init__.py  transcript_loader.py
evals/metrics/: __init__.py  retrieval.py
evals/results/: __init__.py  schemas.py
evals/retrieval/: __init__.py  runner.py
evals/schemas/: __init__.py  task.py
evals/tasks/: __init__.py
evals/tasks/retrieval/: __init__.py  runner.py  seed_transcripts.py
evals/tasks/tool_params/: __init__.py  dataset.py  metrics.py  runner.py  types.py
evals/tool_params/: __init__.py  metrics.py  runner.py
frontend/: .env.example  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.config.ts  app.vue
frontend/app/components/: DragDropOverlay.vue  FileAvatar.vue  FileUploadButton.vue  ModelSelect.vue
frontend/app/composables/: useFileUpload.ts  useHighlighter.ts  useModels.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
scripts/: ingest_from_volume.py  seed_eval_transcripts.py
src/: config.py  main.py
src/agents/: __init__.py  factory.py  generation.py  helpers.py  models.py  multi_query.py  vanilla.py
src/api/: routes.py  schemas.py
src/data/: __init__.py  data_loader.py  modal_ingestion.py  scraper.py
src/database/: connection.py  schema.sql
src/embeddings/: __init__.py  service.py
src/evals/: __init__.py  dataset.py  harness.py  metrics.py  run_evals.py
src/ingestion/: chunker.py  pipeline.py  text_cleaner.py  youtube_loader.py
src/observability/: README.md  __init__.py  tracing.py
src/retrieval/: __init__.py  fts.py  hybrid.py  models.py  vector.py
src/scrapers/: __init__.py
src/utils/: timing.py
tests/: README.md  __init__.py  conftest.py
tests/evals/: __init__.py  test_agent_tool_params.py
tests/integration/: test_channel_data_loader_integration.py  test_chat_completion_integration.py  test_chunk_expansion_integration.py  test_query_expanded_integration.py  test_speaker_filtering.py  test_text_ingestion_integration.py  test_youtube_ingestion_integration.py
tests/unit/: test_dwarkesh_parser.py  test_ingestion.py  test_ingestion_pipeline.py  test_observability.py  test_retrieval_metrics.py  test_scraper.py  test_tool_params_evals.py  test_transcript_loader.py
(+34 files in other folders)
