[project]
name = "retrieval-evals"
version = "0.1.0"
description = "YouTube transcript retrieval system with Postgres FTS and agent reranking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Database
    "psycopg[binary,pool]>=3.1.0",
    "pgvector>=0.2.0",
    # YouTube transcript fetching
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "youtube-transcript-api>=0.6.0",
    # Text processing & chunking
    "tiktoken>=0.5.0",
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Development
    "httpx>=0.25.0",
    "openai>=2.14.0",
    "openai-agents>=0.0.16",
    "pytest>=9.0.2",
    # Observability
    "langchain-openai>=1.1.6",
    "langsmith[openai-agents]>=0.5.1",
    # CLI utilities
    "tqdm>=4.66.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyrefly>=0.46.0",
]
